feat: use preprocess for printing

--- a/vm/lib/dune
+++ b/vm/lib/dune
@@ -1,2 +1,7 @@
 (library
- (name vm))
+ (name vm)
+  (modules compiler)
+  (libraries yojson ppx_deriving_yojson)
+   (preprocess
+  (pps ppx_deriving_yojson ppx_deriving.show))
+ )
