--- a/vm/lib/dune
+++ b/vm/lib/dune
@@ -1,6 +1,6 @@
 (library
  (name vm)
-  (modules compiler runner)
+  (modules compiler runner buffer heap)
   (libraries yojson ppx_deriving_yojson)
    (preprocess
   (pps ppx_deriving_yojson ppx_deriving.show))
