feat: add node tag and env functions in heap, include heap in runner

--- a/vm/lib/dune
+++ b/vm/lib/dune
@@ -3,5 +3,5 @@
   (modules compiler runner buffer heap)
   (libraries yojson ppx_deriving_yojson)
    (preprocess
-  (pps ppx_deriving_yojson ppx_deriving.show))
+  (pps ppx_deriving_yojson ppx_deriving.show ppx_deriving.enum))
  )
