--- a/vm/test/dune
+++ b/vm/test/dune
@@ -1,3 +1,3 @@
 (tests
- (names buffer_test vm_test compiler_test runner_test)
+ (names buffer_test vm_test compiler_test runner_test type_checker_test)
  (libraries vm alcotest))
