change free instruction to point to env pos

--- a/vm/test/dune
+++ b/vm/test/dune
@@ -1,4 +1,9 @@
 (tests
- (names compiler_test runner_test buffer_test ownership_checker_test type_checker_test life_time_test)
+ (names
+  compiler_test
+  runner_test
+  buffer_test
+  ownership_checker_test
+  type_checker_test
+  life_time_test)
  (libraries vm alcotest))
-
