--- a/vm/lib/dune
+++ b/vm/lib/dune
@@ -1,6 +1,17 @@
 (library
  (name vm)
- (modules compiler runner buffer heap ast types ownership_checker type_checker utils)
+ (modules
+  compiler
+  runner
+  buffer
+  heap
+  ast
+  types
+  ownership_checker
+  type_checker
+  utils
+  builtins
+  LRUCache)
  (libraries yojson ppx_deriving_yojson)
  (preprocess
   (pps ppx_deriving_yojson ppx_deriving.show ppx_deriving.enum)))
